# mcp-server-tree-sitter

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  CRITICAL-NEXT-STEPS.md  FEATURES.md  LANGUAGE_COVERAGE.md  Makefile  NOTICE  README-PERSISTENT.md  README.md  ROADMAP.md  TODO.md  pyproject.toml  run_mcp_server.py
.github/workflows/: ci.yml  lint.yml  release.yml  tests.yml  ty.yml
docs/: MCP_API_REFERENCE.md  REPO_OVERVIEW.md  architecture.md  cli.md  config.example.yaml  config.md  diagnostics.md  logging.md  tree-sitter-type-safety.md  troubleshooting.md
docs/requirements/: logging.md
examples/: basic_usage.py  query_explorer.py  tutorial.md
scripts/: check_logging.sh
src/mcp_server_tree_sitter/: __init__.py  __main__.py  api.py  app.py  config.py  config_env.py  config_loader.py  config_schema.py  context.py  di.py  exceptions.py  logging_config.py  persistent_server.py  server.py
src/mcp_server_tree_sitter/bootstrap/: __init__.py  logging_bootstrap.py
src/mcp_server_tree_sitter/cache/: __init__.py  parser_cache.py
src/mcp_server_tree_sitter/capabilities/: __init__.py  server_capabilities.py
src/mcp_server_tree_sitter/config/: __init__.py  config_loader.py  config_schema.py
src/mcp_server_tree_sitter/language/: __init__.py  import_enrichers.py  loader.py  query_templates.py  registry.py  schema.py  scope_node_types.py  scope_node_types_data.py
src/mcp_server_tree_sitter/language/data/: LANGUAGE_COVERAGE.md  README.md  __init__.py  c.py  cpp.py  csharp.py  go.py  java.py  javascript.py  julia.py  kotlin.py  python.py  query_adaptation.py  rust.py  swift.py  typescript.py
src/mcp_server_tree_sitter/language/templates/: __init__.py  apl.py  c.py  cpp.py  csharp.py  dart.py  go.py  (+8 more)
src/mcp_server_tree_sitter/models/: __init__.py  ast.py  ast_cursor.py  project.py
src/mcp_server_tree_sitter/prompts/: __init__.py  code_patterns.py  mcp_prompts.py
src/mcp_server_tree_sitter/resources/: __init__.py  ast.py  files.py
src/mcp_server_tree_sitter/testing/: __init__.py  pytest_diagnostic.py
src/mcp_server_tree_sitter/tools/: __init__.py  analysis.py  analysis_tools.py  ast_operations.py  ast_tools.py  debug.py  dependencies.py  file_operations.py  file_tools.py  metrics.py  project.py  project_tools.py  prompt_handlers.py  query_builder.py  registration.py  search.py  search_tools.py  symbol_extraction.py
src/mcp_server_tree_sitter/utils/: file_io.py  path.py  security.py  tree_sitter_helpers.py  tree_sitter_types.py
tests/: .gitignore  README.md  __init__.py  conftest.py  test_app.py  test_ast_cursor.py  test_basic.py  test_cache_config.py  test_cli_arguments.py  test_concurrency.py  test_config_behavior.py  test_config_edge_cases.py  test_config_manager.py  test_context.py  test_di.py  test_env_config.py  test_failure_modes.py  test_file_operations.py  test_find_enclosing_scope.py  test_find_similar_code.py  test_find_text_edge_cases.py  test_get_enclosing_scope.py  test_get_node_types.py  test_helpers.py  test_language_listing.py  test_language_loader.py  test_logging_bootstrap.py  test_logging_config.py  test_logging_config_di.py  test_logging_early_init.py  test_logging_env_vars.py  test_logging_handlers.py  test_makefile_targets.py  test_manifest_entry_points.py  test_mcp_context.py  test_models_ast.py  test_parser_cache.py  test_persistent_server.py  test_project_path_containment.py  test_project_persistence.py  (+18 more)
tests/enclosing_scope/: __init__.py  scope_assertions.py  test_c.py  test_cpp.py  test_csharp.py  test_go.py  test_java.py  test_javascript.py  test_julia.py  test_kotlin.py  test_python.py  test_rust.py  test_swift.py  test_typescript.py
tests/test_config/: test_config_behavior.py  test_config_edge_cases.py  test_config_manager.py  test_diagnose_config.py  test_yaml_config_di.py
tests/test_diagnostics/: __init__.py  test_ast.py  test_ast_parsing.py  test_cursor_ast.py  test_language_pack.py  test_language_registry.py  test_unpacking_errors.py
tests/test_logging/: test_debug_flag.py  test_logging_bootstrap.py  test_logging_config.py  test_logging_config_di.py  test_logging_handlers.py
(+2 files in other folders)
